# RustyNEAT

./: .gitignore  .gitignore.swp  Cargo.toml  README.md  benchmarks.numbers  benchmarks.py  e2e.py  e2e_alternating_convergence.py  e2e_l3_to_map.py  e2e_large_scale_pretrained_voting_convergence2.py  e2e_pretrained_voting_convergence.py  e2e_pretrained_voting_convergence2.py  e2e_voting_convergence.py  ev.py  ev2.py  hom_delayed_mnist.py  hom_mnist.py  hom_tests.py  hom_without_htm_mnist.py  htm4_overlap_curve.py  htm_htm4.py  htm_mnist.py  htm_mnist_reinforcement_learning.py  htm_reinforcement_learning.py  htm_tests.py  mnist_cnn_autoencoder_vote_1_layer.py  mnist_ecc_conv_conv_conv_conv_pytorch2.py  mnist_ecc_conv_conv_conv_conv_pytorch4 layer4.model  mnist_ecc_conv_conv_conv_conv_pytorch4.py  mnist_ecc_conv_conv_conv_conv_top_1_pytorch4 layer4.model  mnist_ecc_conv_conv_conv_top_1_pytorch.py  mnist_ecc_conv_pytorch.py  mnist_ecc_conv_top_1_pytorch.py  mnist_ecc_sep_sep_pytorch.py  mnist_gabor_vote_1_layer.py  mnist_htm.py  mnist_htm_delayed.py  mnist_input_distribution.py  mnist_vote_1_layer.py  ndalgebra_tests.py  (+32 more)
.cargo/: config
benchmarks/: Htm g 1024 2 0.8 update 400.pth  Htm g 1024 4#0.8 0.8 update 400.pth  Htm n 1024 2 0.8 0 update 100.pth  Htm n 1024 2 0.8 0 update 400.pth  Htm n 1024 4rn#0.2 0.8 update 400.pth  benchmarks.xlsx
benchmarks_old/: Htm g 1024 2 0.8 update 100.pth  Htm g 1024 4#0.2 0.8 update 400.pth  Htm g 1024 4#0.8 0.8 update 100.pth  Htm g 1024 4rn#0.2 0.8 update 100.pth  Htm n 1024 4#0.2 0.8 update 400.pth  Htm n 1024 4#0.8 0.8 update 400.pth
envs/: Cargo.toml  index.html
envs/src/: lib.rs
experiments/: cnn.accuracy  cnn.py  dynamic_inhibition.py  dynamic_inhibition2.py  e2e_pretrained_voting_convergence3.py  efficiency benchmarks.txt  entropy_maximisation_experiments.py  entropy_maximisation_experiments.results.txt  habitat_ecc.py  htm_tests.py  k_means_convergence.py  mnist_ecc_conv_conv_conv_conv_pytorch.py  mnist_ecc_conv_conv_conv_conv_pytorch2 layer2.model  mnist_ecc_conv_conv_conv_conv_pytorch3 layer3.model  mnist_ecc_conv_conv_conv_conv_pytorch3 layer4.model  mnist_ecc_conv_conv_conv_conv_pytorch4 layer2.model  mnist_ecc_conv_conv_conv_conv_pytorch4 layer3.model  mnist_ecc_conv_conv_conv_conv_top_1_pytorch4 layer2.model  mnist_ecc_conv_conv_conv_conv_top_1_pytorch4.py  mnist_ecc_conv_conv_pytorch layer2.model  mnist_htm.py  mnist_htm_delayed2.py  mnist_pytorch.py  mnist_vote.py  mnist_vote2.py  moore_machine_ecc_inference.py  predictive_coding_plus_epsilon.py  predictive_coding_sparse_sep_plus_epsilon.py  predictive_coding_stacked10.py  predictive_coding_stacked11.py  predictive_coding_stacked3_experiment1.model  predictive_coding_stacked4.py  predictive_coding_stacked5_experiment12.model  predictive_coding_stacked6.py  predictive_coding_stacked6_experiment23oc9_no_l2 accuracy.txt  predictive_coding_stacked6_experiment2411oc64oc16 accuracy.txt  predictive_coding_stacked6_experiment241oc144oc16 layer4.model  predictive_coding_stacked6_experiment241oc64oc16 layer4.model  (+27 more)
htm/: Cargo.toml  README.md
htm/src/: as_usize.rs  conv_dropout_tensor.rs  conv_shape.rs  conv_spiking_shape.rs  conv_spiking_weights.rs  conv_tensor.rs  conv_tensor_trait.rs  conv_weights.rs  cpu_assembly.rs  cpu_big_htm.rs  cpu_bitset.rs  cpu_bitset2d.rs  cpu_bitset3d.rs  cpu_dg2.rs  cpu_ecc.rs  cpu_ecc_dense.rs  cpu_ecc_machine.rs  cpu_ecc_population.rs  cpu_ecc_sparse.rs  cpu_ecc_sparse_learnable.rs  cpu_ecc_spiking.rs  cpu_higher_order_memory.rs  cpu_hom.rs  cpu_hom2.rs  cpu_htm.rs  cpu_htm2.rs  cpu_htm3.rs  cpu_htm4.rs  cpu_htm5.rs  cpu_input.rs  cpu_sdr.rs  cpu_sdr_dataset.rs  cpu_sdr_spiking.rs  dense_weights.rs  dg2.rs  ecc.rs  ecc_config.rs  ecc_inhibition.rs  ecc_layer.rs  ecc_net.rs  (+43 more)
htm_vis/: Cargo.toml
htm_vis/assets/: cube_150.frag  cube_150.vert
htm_vis/src/: lib.rs  main.rs
minerl/: Main.py  ccipca.py  mca.py  (+6 more)
pylib/: Cargo.toml
pylib/src/: lib.rs  py_ecc.rs  py_ecc_config.rs  py_ecc_conv_tensor.rs  py_ecc_layer.rs  py_ecc_net.rs  py_ecc_net_sdrs.rs  py_ecc_population.rs  py_ecc_tensor.rs  py_envs.rs  py_htm.rs  py_ndalgebra.rs  py_ocl.rs  py_rustyneat.rs  py_sdr_dataset.rs  slice_box.rs  util.rs
rustlib/: Cargo.toml
rustlib/src/: activations.rs  context.rs  cppn.rs  gpu.rs  lib.rs  neat.rs  num.rs  substrate.rs  util.rs
rustlib/src/envs/: evol.rs  mod.rs
rustlib/src/gpu/: feed_forward_net.rs  feed_forward_net_picbreeder.rs  feed_forward_net_substrate.rs  mod.rs
(+936 files in other folders)
