[package]
name = "htm"
version = "0.1.0"
authors = ["Alagris <alagris12358@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ocl = "0.19.3"
ndalgebra = {path="../ndalgebra"}
num-traits = "0.2.14"
failure = "0.1.8"
rand = "0.8.4"