[package]
name = "htm-vis"
version = "0.1.0"
authors = ["Alagris <alagris12358@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
itertools = "0.10.0"
htm = {path="../htm"}
ndalgebra = {path="../ndalgebra"}
num-traits = "0.2.14"
failure = "0.1.8"
rand = "0.8.4"
piston = "0.53.0"
piston2d-graphics = "0.40.0"
pistoncore-glutin_window = "0.69.0"
piston2d-opengl_graphics = "0.78.0"
vecmath = "1.0.0"
piston_window = "0.120.0"
image = "0.23.0"