[package]
name = "RustyNEAT"
version = "0.1.0"
authors = ["Alagris <alagris12358@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rusty_neat"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[dependencies]
rusty_neat_core = {path= "../neat" }
numpy = "0.13"
ndalgebra = {path="../ndalgebra"}
htm = {path="../htm"}
#htm-vis = {path="../htm_vis"}
chrono = "0.4.19"
serde = "1.0.130"
rand = "0.8.4"
ciborium = "0.2.0"

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]