[package]
name = "rusty_neat_core"
version = "0.1.0"
authors = ["Alagris <alagris12358@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.14"
rand = "0.8.3"
lazy_static = "1.4.0"
maplit = "1.0.2"
ocl = "0.19.3"
